--- a/style.css
+++ b/style.css
@@ -74,3 +74,47 @@ a{
 .bg-style:hover {
     filter: brightness(90%);
 }
+
+.card {
+    width: auto;
+}
+
+.img-wrapper {
+    max-width: 100%;
+    height: 20vw;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+#img-card {
+    max-width: 100%;
+    max-height: 100%;
+}
+
+@media screen and (min-width:768px){
+        .carousel-inner {
+          display: flex;
+        }
+        .carousel-item {
+          margin-right: 0;
+          flex: 0 0 33.333333%;
+          display: block;
+        }
+      }
+      .carousel-inner{
+        padding: 1em;
+    }
+    .card{
+        margin: 0 .5em;
+        box-shadow: 2px 6px 8px 0 rgba(22, 22, 26, 0.18);
+        border: none;
+    }
+    .carousel-control-prev, .carousel-control-next{
+        background-color: #e1e1e1;
+        width: 6vh;
+        height: 6vh;
+        border-radius: 50%;
+        top: 50%;
+        transform: translateY(-50%);
+    }
