--- a/style.css
+++ b/style.css
@@ -75,46 +75,55 @@ a{
     filter: brightness(90%);
 }
 
-.card {
-    width: auto;
+#calendario {
+    color: white;
+    margin-top: 50px;
 }
 
-.img-wrapper {
+.carousel-inner {
+  padding: 1em;
+}
+.card {
+  margin: 0 0.5em;
+  box-shadow: 2px 6px 8px 0 rgba(22, 22, 26, 0.18);
+  border: none;
+  height: 300px;
+}
+.carousel-control-prev,
+.carousel-control-next {
+  background-color: black;
+  width: 6vh;
+  height: 6vh;
+  border-radius: 50%;
+  top: 50%;
+  transform: translateY(-50%);
+}
+@media (min-width: 768px) {
+  .carousel-item {
+    margin-right: 0;
+    display: block;
+  }
+  .carousel-inner {
+    display: flex;
+  }
+}
+.card .img-wrapper {
     max-width: 100%;
-    height: 20vw;
+    height: 13em;
     display: flex;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
 }
-
-#img-card {
-    max-width: 100%;
+.card img {
     max-height: 100%;
 }
+@media (max-width: 767px) {
 
-@media screen and (min-width:768px){
-        .carousel-inner {
-          display: flex;
-        }
-        .carousel-item {
-          margin-right: 0;
-          flex: 0 0 33.333333%;
-          display: block;
-        }
-      }
-      .carousel-inner{
-        padding: 1em;
-    }
-    .card{
-        margin: 0 .5em;
-        box-shadow: 2px 6px 8px 0 rgba(22, 22, 26, 0.18);
-        border: none;
-    }
-    .carousel-control-prev, .carousel-control-next{
-        background-color: #e1e1e1;
-        width: 6vh;
-        height: 6vh;
-        border-radius: 50%;
-        top: 50%;
-        transform: translateY(-50%);
-    }
+  .carousel-item {
+    margin-right: 0;
+    display: block;
+  }
+  .carousel-inner {
+    display: flex;
+  }
+}
