--- a/Login.css
+++ b/Login.css
@@ -2,7 +2,7 @@
 
  body {
     font-family: 'Poppins' sans-serif;
-    background: url('Imagens/1311910.jpg');
+    background: url('img/1311910.jpg');
     backdrop-filter: blur 2px;
     
     
