--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;500;600;700&display=swap');
 
-
+@font-face {
+    font-family: 'retro';
+    src: url(assets/Retro\ Gaming.ttf) format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
 :root {
     --roxo-color: #CDA7FF;
     --darkb-color: #1D438A;
@@ -137,6 +142,25 @@ a{
     padding: 20px 20px;
 }
 
+.h1-games-retro {
+    align-items: center;
+}
+
+#games-container .gold {
+    font-family: 'retro', Times, serif;
+    color: #6b7453;
+    padding: 15px 20px;
+    border-radius: 10px;
+    background-color: #c4cfa1;
+}
+
+#small-container-retro {
+    background-color: #c4cfa1;  
+}
+
+#small-container-retro h2 {
+    font-family: 'retro', Times, serif;
+}
 @media (max-width: 768px) {
     #main-container {
         display: flex;
