--- a/Login.css
+++ b/Login.css
@@ -1,13 +1,43 @@
- @import url('https://fonts.googleapis.com/css2?family=Anton&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
- body {
-    font-family: 'Poppins' sans-serif;
-    background: url('img/1311910.jpg');
-    backdrop-filter: blur 2px;
-    
-    
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;500;600;700&display=swap');
+ 
+ @font-face {
+     font-family: 'retro';
+     src: url(assets/Retro\ Gaming.ttf) format('truetype');
+     font-weight: normal;
+     font-style: normal;
+ }
+ 
+ :root {
+     --roxo-color: #CDA7FF;
+     --darkb-color: #1D438A;
  }
 
+ body {
+   font-family: 'Josefin Sans', sans-serif;
+    background: url('img/1311910.jpg');
+    backdrop-filter: blur 2px;
+ }
+
+   .roxo {
+      color: var(--roxo-color);
+   }
+
+   .navbar-brand {
+      font-family: 'retro', Times, serif;
+      color: var(--roxo-color);
+   }
+   .bi-person-circle {
+      font-size: 22px;
+   }
+
+   .bi-person-circle:hover {
+      color: white;
+   }
+
+   #nav-botao:hover {
+      color: rgba(255, 255, 255, 0.651)
+   }
+/* ============== */
  .box-area {
     width: 930px;
  }
