--- a/style.css
+++ b/style.css
@@ -216,6 +216,52 @@ a{
     color: white;
 }
 
+footer{
+    margin-top: 90px;
+    background-color: #343A40;
+}
+
+#-footer {
+    justify-content: space-between;
+}
+
+#--footer-h5{ /*Títulos*/
+    color: var(--roxo-color);
+}
+.nós{
+    color: white;
+}
+
+.links{
+    text-decoration: none;
+    color: #fff;
+}
+
+.bi-instagram{
+    color: white;
+}
+
+.bi-facebook{
+    color: white;
+}
+
+.bi-envelope-at-fill{
+    color: white;
+}
+
+.bi-telephone {
+    color: white;
+}
+
+.Copyright{
+    text-align: center;
+    color: rgb(146, 143, 143);
+}
+
+.ping-copyrigth {
+    color: rgb(146, 143, 143);
+}
+
 
 @media (max-width: 768px) {
     #main-container {
