--- a/editar.css
+++ b/editar.css
@@ -1,7 +1,42 @@
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;500;600;700&display=swap');
+ 
+ @font-face {
+     font-family: 'retro';
+     src: url(assets/Retro\ Gaming.ttf) format('truetype');
+     font-weight: normal;
+     font-style: normal;
+ }
+ 
+ :root {
+     --roxo-color: #CDA7FF;
+     --darkb-color: #1D438A;
+ }
+
+   .roxo {
+      color: var(--roxo-color);
+   }
+
+   .navbar-brand {
+      font-family: 'retro', Times, serif;
+      color: var(--roxo-color);
+   }
+   .bi-person-circle {
+      font-size: 22px;
+   }
+
+   .bi-person-circle:hover {
+      color: white;
+   }
+
+   #nav-botao:hover {
+      color: rgba(255, 255, 255, 0.651)
+   }
+
 body {
     background: #615968;
     font-family: Helvetica;
     color: #fff;
+    font-family: 'Josefin Sans', sans-serif;
 
     justify-content: center;
     align-items: center;
@@ -25,11 +60,11 @@ body {
 }
 
 .container img {
-    width: 150px;
-    height: 175px;
+    width: 175px;
     border-radius: 5px;
     
     padding-top: 45px;
+    margin-bottom: 30px;
 }
 
 .container .texto {
